// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createIdList() createIdList([ '1', '2', '3', '4', [length]: 4 ], [ 'EMPTY', 'EMPTY', 'EMPTY', 'EMPTY', [length]: 4 ], %o) 1`] = `
Object {
  "availableEntities": Array [],
  "result": Array [
    "4",
    "2",
    "3",
    "1",
  ],
  "seed": Object {
    "seed": "test",
    "state": Object {
      "S": Array [
        92,
        55,
        235,
        213,
        126,
        59,
        37,
        65,
        117,
        41,
        205,
        7,
        51,
        174,
        214,
        0,
        171,
        155,
        139,
        1,
        196,
        125,
        138,
        225,
        223,
        97,
        147,
        203,
        109,
        146,
        110,
        190,
        215,
        141,
        53,
        128,
        79,
        192,
        152,
        154,
        49,
        218,
        164,
        40,
        35,
        224,
        101,
        242,
        186,
        12,
        248,
        200,
        252,
        142,
        160,
        111,
        249,
        17,
        91,
        88,
        130,
        232,
        96,
        140,
        66,
        54,
        69,
        76,
        75,
        222,
        188,
        149,
        34,
        177,
        184,
        191,
        9,
        178,
        238,
        68,
        217,
        187,
        131,
        189,
        185,
        234,
        194,
        143,
        28,
        121,
        167,
        150,
        100,
        255,
        64,
        106,
        86,
        38,
        204,
        123,
        173,
        170,
        114,
        87,
        195,
        115,
        183,
        19,
        31,
        95,
        193,
        62,
        85,
        105,
        60,
        241,
        180,
        156,
        159,
        208,
        210,
        15,
        244,
        89,
        163,
        108,
        237,
        116,
        3,
        13,
        30,
        129,
        136,
        176,
        112,
        70,
        46,
        61,
        239,
        198,
        165,
        246,
        209,
        230,
        94,
        221,
        107,
        228,
        5,
        207,
        226,
        206,
        63,
        50,
        20,
        52,
        122,
        201,
        145,
        157,
        48,
        148,
        219,
        236,
        181,
        104,
        250,
        254,
        135,
        2,
        43,
        82,
        16,
        166,
        212,
        18,
        134,
        102,
        29,
        168,
        10,
        83,
        151,
        78,
        119,
        93,
        67,
        77,
        133,
        227,
        118,
        197,
        132,
        45,
        175,
        216,
        153,
        26,
        211,
        161,
        144,
        58,
        243,
        23,
        245,
        4,
        74,
        27,
        251,
        24,
        253,
        11,
        80,
        14,
        21,
        162,
        137,
        231,
        240,
        57,
        179,
        71,
        33,
        120,
        124,
        8,
        98,
        32,
        72,
        169,
        247,
        22,
        229,
        25,
        127,
        42,
        233,
        99,
        36,
        73,
        172,
        81,
        182,
        6,
        39,
        56,
        202,
        47,
        90,
        199,
        158,
        220,
        103,
        113,
        44,
        84,
      ],
      "i": 28,
      "j": 31,
    },
  },
}
`;

exports[`createIdList() createIdList([ '1', '2', '3', '4', [length]: 4 ], [ 'EMPTY', 'EMPTY', 'EMPTY', [length]: 3 ], %o) 1`] = `
Object {
  "availableEntities": Array [
    "1",
  ],
  "result": Array [
    "4",
    "2",
    "3",
  ],
  "seed": Object {
    "seed": "test",
    "state": Object {
      "S": Array [
        92,
        55,
        235,
        213,
        126,
        59,
        37,
        65,
        117,
        41,
        205,
        7,
        51,
        174,
        214,
        0,
        171,
        155,
        139,
        1,
        196,
        125,
        45,
        42,
        216,
        32,
        88,
        38,
        190,
        146,
        110,
        109,
        215,
        141,
        53,
        128,
        79,
        192,
        152,
        154,
        49,
        218,
        164,
        40,
        35,
        224,
        101,
        242,
        186,
        12,
        248,
        200,
        252,
        142,
        160,
        111,
        249,
        17,
        91,
        147,
        130,
        232,
        96,
        140,
        66,
        54,
        69,
        76,
        75,
        222,
        188,
        149,
        34,
        177,
        184,
        191,
        9,
        178,
        238,
        68,
        217,
        187,
        131,
        189,
        185,
        234,
        194,
        143,
        28,
        121,
        167,
        150,
        100,
        255,
        64,
        106,
        86,
        203,
        204,
        123,
        173,
        170,
        114,
        87,
        195,
        115,
        183,
        19,
        31,
        95,
        193,
        62,
        85,
        105,
        60,
        241,
        180,
        156,
        159,
        208,
        210,
        15,
        244,
        89,
        163,
        108,
        237,
        116,
        3,
        13,
        30,
        129,
        136,
        176,
        112,
        70,
        46,
        61,
        239,
        198,
        165,
        246,
        209,
        230,
        94,
        221,
        107,
        228,
        5,
        207,
        226,
        206,
        63,
        50,
        20,
        52,
        122,
        201,
        145,
        157,
        48,
        148,
        219,
        236,
        181,
        104,
        250,
        254,
        135,
        2,
        43,
        82,
        16,
        166,
        212,
        18,
        134,
        102,
        29,
        168,
        10,
        83,
        151,
        78,
        119,
        93,
        67,
        77,
        133,
        227,
        118,
        197,
        132,
        138,
        175,
        223,
        153,
        26,
        211,
        161,
        144,
        58,
        243,
        23,
        245,
        4,
        74,
        27,
        251,
        24,
        253,
        11,
        80,
        14,
        21,
        162,
        137,
        231,
        240,
        57,
        179,
        71,
        33,
        120,
        124,
        8,
        98,
        97,
        72,
        169,
        247,
        22,
        229,
        25,
        127,
        225,
        233,
        99,
        36,
        73,
        172,
        81,
        182,
        6,
        39,
        56,
        202,
        47,
        90,
        199,
        158,
        220,
        103,
        113,
        44,
        84,
      ],
      "i": 21,
      "j": 148,
    },
  },
}
`;

exports[`createIdList() createIdList([ '1', '2', '3', '4', [length]: 4 ], [ 'EMPTY', [length]: 1 ], %o) 1`] = `
Object {
  "availableEntities": Array [
    "1",
    "2",
    "3",
  ],
  "result": Array [
    "4",
  ],
  "seed": Object {
    "seed": "test",
    "state": Object {
      "S": Array [
        92,
        55,
        235,
        213,
        126,
        59,
        37,
        65,
        135,
        87,
        52,
        239,
        99,
        42,
        125,
        141,
        117,
        1,
        254,
        2,
        230,
        5,
        45,
        174,
        216,
        32,
        88,
        38,
        190,
        146,
        110,
        109,
        215,
        0,
        53,
        128,
        79,
        192,
        152,
        154,
        49,
        218,
        164,
        40,
        35,
        224,
        101,
        242,
        186,
        12,
        248,
        200,
        252,
        142,
        160,
        111,
        249,
        17,
        91,
        147,
        130,
        232,
        96,
        140,
        66,
        54,
        69,
        76,
        75,
        222,
        188,
        149,
        34,
        177,
        184,
        191,
        9,
        178,
        238,
        68,
        217,
        187,
        131,
        189,
        185,
        234,
        194,
        143,
        28,
        121,
        167,
        150,
        100,
        255,
        64,
        106,
        86,
        203,
        204,
        123,
        173,
        170,
        114,
        41,
        195,
        115,
        183,
        19,
        31,
        95,
        193,
        62,
        85,
        105,
        60,
        241,
        180,
        156,
        159,
        208,
        210,
        15,
        244,
        89,
        163,
        108,
        237,
        116,
        3,
        13,
        30,
        129,
        136,
        176,
        112,
        70,
        46,
        61,
        7,
        198,
        165,
        246,
        209,
        196,
        94,
        221,
        107,
        228,
        214,
        207,
        226,
        206,
        63,
        50,
        20,
        205,
        122,
        201,
        145,
        157,
        48,
        148,
        219,
        236,
        181,
        104,
        250,
        139,
        171,
        155,
        43,
        82,
        16,
        166,
        212,
        18,
        134,
        102,
        29,
        168,
        10,
        83,
        151,
        78,
        119,
        93,
        67,
        77,
        133,
        227,
        118,
        197,
        132,
        138,
        175,
        223,
        153,
        26,
        211,
        161,
        144,
        58,
        243,
        23,
        245,
        4,
        74,
        27,
        251,
        24,
        253,
        11,
        80,
        14,
        21,
        162,
        137,
        231,
        240,
        57,
        179,
        71,
        33,
        120,
        124,
        8,
        98,
        97,
        72,
        169,
        247,
        22,
        229,
        25,
        127,
        225,
        233,
        51,
        36,
        73,
        172,
        81,
        182,
        6,
        39,
        56,
        202,
        47,
        90,
        199,
        158,
        220,
        103,
        113,
        44,
        84,
      ],
      "i": 7,
      "j": 137,
    },
  },
}
`;

exports[`createIdList() createIdList([ '1', '2', '3', [length]: 3 ], [ 'EMPTY', 'EMPTY', 'EMPTY', 'EMPTY', [length]: 4 ], %o) 1`] = `
Object {
  "availableEntities": Array [],
  "result": Array [
    "3",
    "1",
    "2",
  ],
  "seed": Object {
    "seed": "test",
    "state": Object {
      "S": Array [
        92,
        55,
        235,
        213,
        126,
        59,
        37,
        65,
        117,
        41,
        205,
        7,
        51,
        174,
        214,
        0,
        171,
        155,
        139,
        1,
        196,
        125,
        138,
        225,
        223,
        97,
        147,
        203,
        109,
        146,
        110,
        190,
        215,
        141,
        53,
        128,
        79,
        192,
        152,
        154,
        49,
        218,
        164,
        40,
        35,
        224,
        101,
        242,
        186,
        12,
        248,
        200,
        252,
        142,
        160,
        111,
        249,
        17,
        91,
        88,
        130,
        232,
        96,
        140,
        66,
        54,
        69,
        76,
        75,
        222,
        188,
        149,
        34,
        177,
        184,
        191,
        9,
        178,
        238,
        68,
        217,
        187,
        131,
        189,
        185,
        234,
        194,
        143,
        28,
        121,
        167,
        150,
        100,
        255,
        64,
        106,
        86,
        38,
        204,
        123,
        173,
        170,
        114,
        87,
        195,
        115,
        183,
        19,
        31,
        95,
        193,
        62,
        85,
        105,
        60,
        241,
        180,
        156,
        159,
        208,
        210,
        15,
        244,
        89,
        163,
        108,
        237,
        116,
        3,
        13,
        30,
        129,
        136,
        176,
        112,
        70,
        46,
        61,
        239,
        198,
        165,
        246,
        209,
        230,
        94,
        221,
        107,
        228,
        5,
        207,
        226,
        206,
        63,
        50,
        20,
        52,
        122,
        201,
        145,
        157,
        48,
        148,
        219,
        236,
        181,
        104,
        250,
        254,
        135,
        2,
        43,
        82,
        16,
        166,
        212,
        18,
        134,
        102,
        29,
        168,
        10,
        83,
        151,
        78,
        119,
        93,
        67,
        77,
        133,
        227,
        118,
        197,
        132,
        45,
        175,
        216,
        153,
        26,
        211,
        161,
        144,
        58,
        243,
        23,
        245,
        4,
        74,
        27,
        251,
        24,
        253,
        11,
        80,
        14,
        21,
        162,
        137,
        231,
        240,
        57,
        179,
        71,
        33,
        120,
        124,
        8,
        98,
        32,
        72,
        169,
        247,
        22,
        229,
        25,
        127,
        42,
        233,
        99,
        36,
        73,
        172,
        81,
        182,
        6,
        39,
        56,
        202,
        47,
        90,
        199,
        158,
        220,
        103,
        113,
        44,
        84,
      ],
      "i": 28,
      "j": 31,
    },
  },
}
`;
